# llm-prompt-recurse

./: .gitignore  README.md  auto_chat.py  interactive.py  llm_prompt_recurse.py  ofe.json  pyproject.toml  run
chats/: cover_letter.toml
prompts/: cover_letter.json  cover_letter.recommended.txt  email_contractor.json  email_contractor.recommended.txt  examples.json  examples.toml  job_fit.json  job_fit.recommended.txt  linkedin_from_tweet.json  markdown-resume-builder.json  markdown-resume-builder.recommended.txt  meta-prompt.json  meta-prompt.recommended.txt  pokemon.json  pokemon.recommended.txt  test.json
